--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
       "react-paypal-button-v2": "^2.6.3",
       "react-qr-reader": "^2.2.1",
       "react-router-dom": "^5.2.0",
-      "react-scripts": "4.0.3",
+      "react-scripts": "^4.0.3",
       "react-tooltip": "^4.2.21",
       "reactstrap": "^8.10.0",
       "recharts": "^2.1.6",
@@ -50,14 +50,12 @@
    },
    "browserslist": {
       "production": [
-         ">0.2%",
-         "not dead",
-         "not op_mini all"
+         "last 1 version",
+         "> 1%",
+         "IE 10"
       ],
       "development": [
-         "last 1 chrome version",
-         "last 1 firefox version",
-         "last 1 safari version"
+         "last 1 version"
       ]
    }
 }
